<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.mozilla.metrics</groupId>
  <artifactId>grouperfish-service</artifactId>
  <version>0.3-SNAPSHOT</version>

  <name>grouperfish</name>
  <description>Clustering engine for the web</description>
  <url>https://github.com/mozilla-metrics/grouperfish</url>

  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <skip.tests>false</skip.tests>
  </properties>


  <repositories>
    <repository>
      <id>mozilla-metrics-snapshots</id>
      <url>http://mozilla-metrics.github.com/maven2/snapshots</url>
    </repository>

    <repository>
      <id>sonatype-nexus-public</id>
      <name>SonaType public snapshots and releases repository</name>
      <url>https://oss.sonatype.org/content/groups/public</url>
    </repository>

    <repository>
      <id>java.net</id>
      <url>http://download.java.net/maven/2</url>
      <name>java.net Maven Repository</name>
    </repository>

    <repository>
      <id>cdh.release.repo</id>
      <url>https://repository.cloudera.com/content/repositories/releases</url>
      <name>Cloudera Releases Repository</name>
      <snapshots><enabled>true</enabled></snapshots>
    </repository>
  </repositories>


  <dependencies>

    <dependency>
      <groupId>com.mozilla</groupId>
      <artifactId>bagheera</artifactId>
      <version>0.3-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>com.googlecode.json-simple</groupId>
      <artifactId>json-simple</artifactId>
      <version>1.1</version>
    </dependency>

    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>5.6</version>
      <classifier>jdk15</classifier>
      <scope>test</scope>
    </dependency>


    <!-- Jersey JAX-RS build time dependencies -->
    <dependency>
      <groupId>com.sun.jersey</groupId>
      <artifactId>jersey-bundle</artifactId>
      <version>1.8</version>
    </dependency>

    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>2.5</version>
      <scope>provided</scope>
    </dependency>
    <!-- End of JAX-RS configuration -->


    <!-- Logging:
         - slf4j is used by all loging inside of the project
         - for all other common logging APIs, we put redirection in place
         - the actual logging implementation is logback (posing as slf4j) -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jcl-over-slf4j</artifactId>
      <version>1.5.11</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>log4j-over-slf4j</artifactId>
      <version>1.5.11</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.5.11</version>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>0.9.20</version>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
      <version>0.9.20</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.5.8</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jcl</artifactId>
      <version>1.5.8</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.1.1</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.16</version>
      <scope>provided</scope>
    </dependency>
    <!-- End of logging configuration. -->

  </dependencies>


  <build>
    <finalName>grouperfish</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <skip>${skip.tests}</skip>
          <argLine>-Xms128m -Xmx768m -XX:PermSize=128m -XX:MaxPermSize=512m</argLine>
          <parallel>false</parallel>
          <suiteXmlFiles>
            <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
          </suiteXmlFiles>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.3.1</version>
        <configuration>
          <finalName>${project.name}-${project.version}</finalName>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <classpathPrefix>${settings.localRepository}</classpathPrefix>
              <classpathLayoutType>repository</classpathLayoutType>
              <mainClass>com.mozilla.grouperfish.cli.Grouperfish</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
